--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 # Полный путь к git проекту (https://oauth2:[[TOKEN]]@[[URL_PROJECT]])
 GIT_FULL_URL=""
+
+# Ссылка на подключение по sshfs (login@ip_address:/path-project /cureent-path)
+SSHFS_URL=
+# Пароль для sshfs подключение
+SSH_PASSWORD=
